--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://serjkitel.github.io/React-app-random-icon/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
